--- a/package.json
+++ b/package.json
@@ -1,15 +1,12 @@
 {
   "name": "starter-spa",
   "version": "0.1.0",
-  "homepage": "https://id-yuu.github.io/SPA-Front",
   "private": true,
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
+    "preview": "vite preview"
   },
   "dependencies": {
     "react": "^18.2.0",
